--- a/users/src/main/resources/application.properties
+++ b/users/src/main/resources/application.properties
@@ -1,8 +1,3 @@
-#spring.datasource.username=rogstudent
-#spring.datasource.password=rogstudent
-#spring.jpa.show-sql=true
-#spring.datasource.url=jdbc:mysql://localhost:3306/chiara?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
-#server.port=8081
 
 spring.datasource.username=testapi
 spring.datasource.password=testapi
@@ -10,4 +5,5 @@ spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://localhost:3306/testapi-db?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 server.port=8081
 
-
+jwt.secret = javainuse
+spring.main.allow-circular-references = true
